# womptools

./: .gitignore  Cargo.toml  README.md
k8s/: 00_namespace.yml  01_secrets.yml  100_prometheus.yml  101_jaeger.yml  102_otel.yml  10_mariadb.yml  11_redis.yml
libraries/auth-token/: Cargo.toml
libraries/auth-token/src/: access_token.rs  builder.rs  error.rs  keys.rs  lib.rs  refresh_token.rs
libraries/db-utils/: Cargo.toml
libraries/db-utils/src/: lib.rs
libraries/eve-esi/: Cargo.toml
libraries/eve-esi/src/: api.rs
libraries/eve-esi/src/model/: character.rs  mod.rs  wallet_journal.rs
libraries/eve-sso/: Cargo.toml
libraries/eve-sso/src/: error.rs  eve_sso.rs  keys.rs  lib.rs  parse.rs
libraries/eve-sso/src/dto/: mod.rs  oauth.rs  token.rs
libraries/logging/: Cargo.toml
libraries/logging/src/: lib.rs
libraries/message-bus/: Cargo.toml
libraries/message-bus/src/: consumer.rs  lib.rs  producer.rs  stream_events.rs
libraries/service-sso-api/: Cargo.toml
libraries/service-sso-api/src/: dto.rs  lib.rs
services/characters/: .env.example  Cargo.toml
services/characters/migrations/: 0_init.down.sql  0_init.up.sql  1_character_data.down.sql  1_character_data.up.sql  2_rework_credentials.down.sql  2_rework_credentials.up.sql  3_remove_credentials.down.sql
services/characters/src/: data_processing.rs  main.rs  message_processing.rs
services/characters/src/database/: mod.rs
services/characters/src/dto/: mod.rs
services/characters/src/routes/: character_by_id.rs  character_list.rs  character_main.rs  mod.rs  status.rs
services/sso/: .env.example  Cargo.toml
services/sso/migrations/: 0_init.down.sql  0_init.up.sql  1_add_user_id.down.sql  1_add_user_id.up.sql  2_add_invalid_column.down.sql  2_add_invalid_column.up.sql
services/sso/src/: main.rs
services/sso/src/database/: mod.rs  model.rs
services/sso/src/routes/: mod.rs  refresh.rs  register.rs  status.rs
services/sso/src/services/: credentials_manager.rs  message_processing.rs  mod.rs
services/users/: .env.example  Cargo.toml
services/users/migrations/: 0_init.down.sql  0_init.up.sql  1_sessions.down.sql  1_sessions.up.sql  2_characters_table.down.sql  2_characters_table.up.sql  3_unique_sessions.down.sql  3_unique_sessions.up.sql  4_session_id_length.down.sql  4_session_id_length.up.sql
services/users/src/: main.rs  users.rs
services/users/src/database/: mod.rs
services/users/src/dto/: character.rs  login.rs  logout.rs  mod.rs  refresh.rs
services/users/src/routes/: character.rs  login.rs  logout.rs  mod.rs  refresh.rs
services/wallet/: .env.example  Cargo.toml
services/wallet/migrations/: 0_init.down.sql  0_init.up.sql  1_add_journal.down.sql  1_add_journal.up.sql  2_balance_history.down.sql  2_balance_history.up.sql
services/wallet/src/: main.rs
services/wallet/src/database/: mod.rs  model.rs
services/wallet/src/dto/: mod.rs
services/wallet/src/routes/: get_balance.rs  get_balance_summary.rs  get_bounty_summary.rs  get_journal.rs  get_user_balance.rs  mod.rs
services/wallet/src/services/: data_processing.rs  message_processing.rs  mod.rs
utils/generate_secrets/: index.js  package-lock.json  package.json
womp-tools/: .env.example  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
womp-tools/actions/auth/: character.ts  cookies.ts  fetch.ts  login.ts  login_eve.ts  logout.ts  refresh.ts  session.ts
womp-tools/actions/character/: dto.ts  get_character.ts  list.ts  main.ts  revalidate.ts
womp-tools/actions/esi/: dto.ts  get_alliance.ts  get_corporation.ts
womp-tools/actions/wallet/: get_balance.ts  get_balance_summary.ts  get_bounty_summary.ts  get_journal.ts  revalidate.ts
womp-tools/app/: RefreshToken.tsx  globals.css  layout.tsx  page.tsx
womp-tools/app/api/session/: route.ts
womp-tools/app/dashboard/: layout.tsx  page.tsx
womp-tools/app/dashboard/assets/: page.tsx
womp-tools/app/dashboard/characters/: error.tsx  loading.tsx  page.tsx
womp-tools/app/dashboard/market/: page.tsx
womp-tools/app/dashboard/planets/: page.tsx
womp-tools/app/dashboard/skills/: page.tsx
womp-tools/app/dashboard/wallet/: layout.tsx  loading.tsx  page.tsx
womp-tools/app/dashboard/wallet/[character_id]/: page.tsx
womp-tools/app/esi-callback/: AuthorizeAction.tsx  AuthorizeLoading.tsx  LoginAction.tsx  RegisterCharacterAction.tsx  page.tsx
womp-tools/app/login/: page.tsx
womp-tools/app/login/esi-authorize/: route.ts
womp-tools/app/login/esi-callback/: page.tsx
womp-tools/app/login/esi-login/: route.ts
womp-tools/components/: ErrorBox.tsx  LoadingIndicator.tsx  SuccessBox.tsx  background.tsx
womp-tools/components/dashboard/: CharacterCard.tsx  NavLinks.tsx  SideNav.tsx
womp-tools/components/dashboard/character/: CharacterCard.tsx  CharacterItem.tsx  CharacterItemLoading.tsx  CharacterList.tsx  StatusBadge.tsx
womp-tools/components/dashboard/navigation/: NavLinks.tsx  SideNav.tsx
womp-tools/components/dashboard/navigation/Wallet/: WalletNavigation.tsx
womp-tools/components/dashboard/tickers/: AllianceTicker.tsx  CorpTicker.tsx
womp-tools/components/dashboard/utils/: ContentContainer.tsx  Counter.tsx
womp-tools/components/dashboard/wallet/: BalanceGraph.tsx  CharacterWallet.tsx  CharacterWalletList.tsx  IncomeGraph.tsx  RattingBountiesGraph.tsx  WalletBalance.tsx  WalletSummary.tsx
womp-tools/components/login/: loginButton.tsx
womp-tools/utils/: formatIsk.ts  formatJournalType.ts
(+2 files in other folders)
