[package]
name = "auth-token"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
tracing = "0.1.40"
jsonwebtoken = "9.3.0"
tokio = { version="1.36.0", features=["full"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
once_cell = "1.19.0"
anyhow = "1.0.81"
