[package]
name = "eve-sso"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
tracing = "0.1.40"
reqwest = { version="0.12.0", features=["json"] }
jsonwebtoken = "9.3.0"
tokio = { version="1.36.0", features=["full"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
chrono = "0.4.35"
