[package]
name = "logging"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.23.0"
opentelemetry = "0.22.0"
opentelemetry-jaeger = "0.21.0"
opentelemetry-jaeger-propagator = "0.1.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
