[package]
name = "message-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
secrecy = { version = "0.8", features = ["serde"] }
tokio = { version="1.36.0", features=["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
opentelemetry = "0.22.0"
