[package]
name = "characters"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.4", features = ["derive", "env"] }
tokio = { version="1.36.0", features=["full"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.23.0"
opentelemetry = "0.22.0"
anyhow = "1.0.81"
serde_urlencoded = "0.7.1"
reqwest = { version="0.12.0", features=["json"] }
base64 = "0.22.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "chrono"] }
jsonwebtoken = "9.3.0"
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
chrono = "0.4.35"
axum-auth = "0.7.0"
message-bus = { path = "../../libraries/message-bus" }
eve-sso = { path = "../../libraries/eve-sso" }
auth-token = { path = "../../libraries/auth-token" }
eve-esi = { path = "../../libraries/eve-esi" }
logging = { path = "../../libraries/logging" }
db-utils = { path = "../../libraries/db-utils" }
futures = "0.3.30"
