[package]
name = "sso"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
dotenv = "0.15.0"
tokio = { version="1.36.0", features=["full"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "chrono"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features=["env-filter"] }
tracing-opentelemetry = "0.23.0"
opentelemetry = "0.22.0"
auth-token = { path = "../../libraries/auth-token" }
message-bus = { path = "../../libraries/message-bus" }
eve-sso = { path = "../../libraries/eve-sso" }
logging = { path = "../../libraries/logging" }
service-sso-api = { path = "../../libraries/service-sso-api" }
db-utils = { path = "../../libraries/db-utils" }
clap = { version = "4.5.4", features = ["derive", "env"] }
